# ai_poc

./: .gitignore  README.md  pyproject.toml
docs/: lipsync_repo_research.md
src/lipsync_tool/: __init__.py  cli.py  conflict_checker.py  pipeline.py
